--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,121 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 10vh;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  color: white;
+  position: sticky;
+  top: 0;
+  width: 100%;
+}
+
+.Header-logotext {
+  margin: 2rem;
+  font-size: calc(10px + 2vmin);
+  text-transform: uppercase;
+  font-family: "Proxima Nova", sans-serif;
+  text-shadow: 0.1em 0.1em 2px whitesmoke;
+  color: #e50914;
+}
+.Movie {
+  background-color: #3B3B3B;
+}
+.Movie-heading {
+  margin: 0%;
+  padding: 2rem;
+  color: white;
+  text-transform: uppercase;
+}
+.Movie-search {
+  padding: 1rem;
+  font-size: 24px;
+  font-weight: bold;
+  border-radius: 15px;
+}
+
+.Movie-container {
+  padding: 2rem 0;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+  max-width: 100%;
+}
+.Movie-wrapper {
+  background-color: #282c34;
+  padding: 0 0 1rem 0;
+  width: 15%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  transition: all 0.3s ease-in-out;
+  border-radius: 10px;
+}
+.Movie-title, .Movie-rate, .Movie-release {
+  color: wheat;
+}
+
+.Movie-title {
+  font-size: 18px;
+  font-weight: 600;
+  height: 4rem;
+  display: flex;
+  margin: 0;
+  align-items: center;
+  transition: all 0.3s ease-in-out;
+  background-color: gray;
+  width: 100%;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  border-radius: 10px 10px 0 0;
+}
+
+.Movie-image {
+  width: 100%;
+  /* max-height: 2rem; */
+}
+
+.Movie-rate {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0.5rem 0;
+  transition: all 0.3s ease-in-out;
+}
+.Movie-rate-star {
+  width: auto;
+  max-height: 1rem;
+  margin-right: 1rem;
+}
+.Movie-release {
+  margin: auto;
+  transition: all 0.3s ease-in-out;
+}
+
+.Movie-wrapper:hover .Movie-title{
+  color: white;
+  background-color: unset;
+}
+.Movie-wrapper:hover .Movie-rate{
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.Movie-wrapper:hover .Movie-release{
+  color: white;
+}
+.Movie-wrapper:hover{
+ background-color: dimgray;
+}
+@media screen and (max-width: 480px) {
+  .Movie-wrapper {
+    width: 30%;
+  }
+  .Movie-title {
+    font-size: 16px;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
