--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,8 @@
   text-transform: uppercase;
 }
 .Movie-search {
-  padding: 1rem;
-  font-size: 24px;
+  padding: 0.5rem 1rem;
+  font-size: 20px;
   font-weight: bold;
   border-radius: 15px;
 }
